Fix source code alignment

--- a/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
+++ b/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
@@ -470,6 +470,7 @@ pre {
 
 	.wp-block-code {
 		border-radius: 0 0 $border_radius $border_radius;
+		direction: ltr;
 
 		code {
 			font-family: var(--wp--preset--font-family--monospace);
